# biocadprotein

./: .gitignore  LICENSE  README.md  best_cnn_model.pth  pyproject.toml  pytest.ini
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  generate_prompt-checkpoint.ipynb
data/: README.md  dataset.csv  fpbase.csv  fpbase.json
examples/: 1_load_dataset.ipynb  README.md
examples/generation/: 1_generation_proteins.ipynb
examples/prop_prediction/: 1_load_dataset.ipynb
fpgen/: README.md  __init__.py  data.py  generator.py  masking.py  metrics.py  utils.py  visualization.py
fpgen/generation/: README.md  __init__.py  generator.py  masking.py  metrics.py
fpgen/prop_prediction/: README.md  __init__.py  dataset.py  metrics.py  predictor.py
fpgen/prop_prediction/models/: embedding_cnn.py  embedding_lstm.py  sequence_cnn.py  sequence_lstm.py
nontrack/: 6_cnn.ipynb  6_cnn2.ipynb
notebooks/: 2_generation_proteins.ipynb  3.1_knn_seq_identity.ipynb  3.2_knn_embeddings.ipynb  3.2_knn_new_prediction.ipynb  3_knn_new_prediction.ipynb  3_knn_prediction.ipynb  4_embeddings_with_ffn.ipynb  4_gradient_boostings.ipynb  5_cnn_esmc.ipynb  5_opeprotein.ipynb  README.md  all_methods.ipynb  generation_proteins.ipynb  get_structures.ipynb  gnn_prediction.ipynb  knn_protein.ipynb  lstm_prediction.ipynb  nn_baseline.ipynb  uni_mol.ipynb
notebooks/2_property_prediction/: 1_exploring_data_analysis.ipynb
tests/: README.md
tests/unit/: test_utils.py
tests/unit/generation/: test_generation_metrics.py  test_masking.py
tests/unit/prop_prediction/: test_dataset.py  test_metrics.py  test_prop_prediction_metrics.py
